weatherapp-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: weatherapp-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - weatherapp.muhammadazmifarih.my.id
    secretName: weatherapp-tls
  rules:
  - host: "weatherapp.muhammadazmifarih.my.id"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: weatherapp
            port:
              number: 80
